version/0.12/_sources/api/solver/_autosummary/settings/pb_dqmom.rst.txt
:orphan:

.. _pb_dqmom:

pb_dqmom
========

.. currentmodule:: ansys.fluent.core.solver.settings_231.pb_dqmom

.. autoclass:: pb_dqmom
    :show-inheritance:
    :undoc-members:
.. rubric:: Named object type

:ref:`child_object_type_child <child_object_type_child_1>`


.. rubric:: Included in:

====================================================   ===========================================

Parent                                                                                     Summary

====================================================   ===========================================
:ref:`exhaust_fan_child <exhaust_fan_child>`                   'child_object_type' of exhaust_fan.

:ref:`phase_child <phase_child_3>`                                   'child_object_type' of phase.

:ref:`inlet_vent_child <inlet_vent_child>`                      'child_object_type' of inlet_vent.

:ref:`phase_child <phase_child_5>`                                   'child_object_type' of phase.

:ref:`intake_fan_child <intake_fan_child>`                      'child_object_type' of intake_fan.

:ref:`phase_child <phase_child_6>`                                   'child_object_type' of phase.

:ref:`mass_flow_inlet_child <mass_flow_inlet_child>`       'child_object_type' of mass_flow_inlet.

:ref:`phase_child <phase_child_9>`                                   'child_object_type' of phase.

:ref:`outlet_vent_child <outlet_vent_child>`                   'child_object_type' of outlet_vent.

:ref:`phase_child <phase_child_13>`                                  'child_object_type' of phase.

:ref:`pressure_inlet_child <pressure_inlet_child>`          'child_object_type' of pressure_inlet.

:ref:`phase_child <phase_child_17>`                                  'child_object_type' of phase.

:ref:`pressure_outlet_child <pressure_outlet_child>`       'child_object_type' of pressure_outlet.

:ref:`phase_child <phase_child_18>`                                  'child_object_type' of phase.

:ref:`velocity_inlet_child <velocity_inlet_child>`          'child_object_type' of velocity_inlet.

:ref:`phase_child <phase_child_23>`                                  'child_object_type' of phase.

====================================================   ===========================================

